96.6/100 done